fix: nav item spacing and theming

--- a/src/styles/cyan-color-theme-vars.sass
+++ b/src/styles/cyan-color-theme-vars.sass
@@ -147,6 +147,7 @@
     
   .cyan--mode--dark
     --cyan-background-color: #002337
+    --cyan-divider-color: var(--chroma-secondary-c)
 
     // Button, Hamburger
     --cyan-hamburger-color: var(--chroma-secondary-g)
