--- a/src/styles/typography.sass
+++ b/src/styles/typography.sass
@@ -10,6 +10,8 @@
   --cyan-monospace-font-family: 'Roboto Mono', monospace
   --cyan-text-font-family: 'Cabin',sans-serif
   --cyan-ui-font-family: 'Cabin', 'Roboto', sans-serif
+
+  --cyan-font-size-ui-small: 14px
   
   // Cleaned up to here ^
   --cyan-ui-font-size: 16px
